More rename sv->fw, focus trap on popovers (not tool tips), fix alignment check-button

--- a/framework.less
+++ b/framework.less
@@ -15,6 +15,12 @@ body
     padding: 0;
 }   
 
+input, button
+{
+    font-family: var(--fw-font-family);
+    font-size: 1rem;
+}
+
 // Section should be used to wrap content and puts padding
 // and removed top/bottom margin on contained elements
 section
@@ -113,6 +119,7 @@ input[type="text"]
 // Base style for button looking things
 .button-base-style()
 {
+    display:inline-block;
     background-color: var(--fw-class-color);
     color: var(--fw-class-contrast-color);
     padding: .575rem .75rem;
@@ -240,8 +247,8 @@ input[type="text"]
 .check-button
 {
     position: relative;
-    display: inline-flex;
-    vertical-align: middle;
+    display: inline-block;
+    vertical-align: baseline;
 
     input[type="checkbox"]
     {
